4 " begin css header et footer"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
 
     <header>
 
-      <img class="logo" src="./images/logo/ohmyfood.png" alt="logo site" />
+      <img class="logo" src="./public/images/logo/ohmyfood.png" alt="logo site" />
       <div class="recherche">
         <i class="fa fa-map-marker"></i>
         <input type="search" class="search" placeholder="Paris, Belleville">
@@ -59,7 +59,7 @@
         <div class="img_resto">
 
           <article class="border">
-            <a href="menu1.html"><img class="img1" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <a href="./public/menu1.html"><img class="img1" src="./public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Image La palette du gout">
               <h3>La palette du gout</h3>
               <p>Ménilmontant</p>
@@ -72,7 +72,7 @@
           </article>
 
           <article class="border">
-            <a href="menu2.html"><img class="img1" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+            <a href="./public/menu2.html"><img class="img1" src="./public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="Image La note enchantée ">
               <h3> La note enchantée</h3>
               <p>Charonne</p>
@@ -85,7 +85,7 @@
           </article>
 
           <article class="border">
-            <a href="menu3.html"><img class="img1" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            <a href="./public/menu3.html"><img class="img1" src="./public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="Image Ala francaise "></a>
             <h3>A la francaise</h3>
             <p>Cité Rouge</p>
@@ -97,7 +97,7 @@
           </article>
 
           <article class="border">
-            <a href="menu4.html"><img class="img1" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            <a href="./public/menu4.html"><img class="img1" src="./public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Image Le délice des sens "></a>
             <h3>Le délice des sens </h3>
             <p>Folie-Méricourt </p>
