--- a/public/menu1.html
+++ b/public/menu1.html
@@ -14,8 +14,8 @@
 
 <body>
   <header>
-    <div class="logo">
-      <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+    <div class="banniere">
+      <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
       <img src="./images/logo/ohmyfood.png" alt="logo" class="logo">
     </div>
   </header>
@@ -23,7 +23,7 @@
   <main>
     <section class="repas">
       <h2>ENTRÉES</h2>
-      <nav class="liste">
+      <nav class="navbar">
         <ul>
           <li class="texte anim clic">
             <div>
@@ -60,7 +60,7 @@
     </section>
     <section class="repas">
       <h2>PLATS</h2>
-      <nav class="liste">
+      <nav class="navbar">
         <ul>
           <li class="texte anim clic">
             <div>
@@ -97,7 +97,7 @@
     </section>
     <section class="repas">
       <h2>DESSERTS</h2>
-      <nav class="liste">
+      <nav class="navbar">
         <ul>
           <li class="texte anim clic">
             <div>
