--- a/index.html
+++ b/index.html
@@ -35,17 +35,20 @@
     <nav>
       <h2>Fonctionnement</h2>
       <ul>
-        <li class=fonctionnement>
+        <li class=navbar>
+          <span>1</span>
           <i class="fas fa-mobile-alt"></i>
           <p>Choississez un restaurant</p>
         </li>
 
-        <li class=fonctionnement>
+        <li class=navbar>
+          <span>2</span>
           <i class="fas fa-bars"></i>
           <p>Composez votre menu</p>
         </li>
 
-        <li class=fonctionnement>
+        <li class=navbar>
+          <span>3</span>
           <i class="fas fa-store"></i>
           <p>Dégustez au restaurant</p>
         </li>
