--- a/index.html
+++ b/index.html
@@ -59,55 +59,76 @@
       <section id="resto">
         <h2> restaurants</h2>
         <div class="img_resto">
-          <article class="border">
-            <a href="./public/menu1.html"><img class="img1" src="./public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          <a href="./public/menu1.html">
+            <figure>
+              <img class="img1" src="./public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Image La palette du gout">
-              <h3>La palette du gout</h3>
-              <p>Ménilmontant</p>
-              <div class="heart">
+              <figcaption class="img">
+                <div class="img_text">
+                  <h3 class="img_text_bold">La palette du gout</h3>
+                  <p>Ménilmontant</p>
+                </div>
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
                 <span class="nouveau1">Nouveau</span>
-              </div>
-            </a>
-          </article>
+              </figcaption>>
+            </figure>
+          </a>
+        </div>
 
-          <article class="border">
-            <a href="./public/menu2.html"><img class="img1" src="./public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="Image La note enchantée ">
-              <h3> La note enchantée</h3>
-              <p>Charonne</p>
-              <div class="heart">
+
+        <div class="img_resto">
+          <a href="./public/menu2.html">
+            <figure>
+              <img class="img1" src="./public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="Image la note enchantée">
+              <figcaption class="img">
+                <div class="img_text">
+                  <h3 class="img_text-bold">La note enchantée</h3>
+                  <p>Charonne</p>
+                </div>
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
-                <span class="nouveau2">Nouveau</span>
-              </div>
-            </a>
-          </article>
+                <span class="nouveau1">Nouveau</span>
+              </figcaption>>
+            </figure>
+          </a>
+        </div>
 
-          <article class="border">
-            <a href="./public/menu3.html"><img class="img1" src="./public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="Image Ala francaise "></a>
-            <h3>A la francaise</h3>
-            <p>Cité Rouge</p>
-            <div class="heart">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
-              <span class="nouveau3">Nouveau</span>
-            </div>
-          </article>
+        <div class="img_resto">
+          <a href="./public/menu3.html">
+            <figure>
+              <img class="img1" src="./public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="Image a la francaise">
+              <figcaption class="img">
+                <div class="img_text">
+                  <h3 class="img_text-bold">A la francaise</h3>
+                  <p>Cité rouge</p>
+                </div>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <span class="nouveau1">Nouveau</span>
+              </figcaption>>
+            </figure>
+          </a>
+        </div>
 
-          <article class="border">
-            <a href="./public/menu4.html"><img class="img1" src="./public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="Image Le délice des sens "></a>
-            <h3>Le délice des sens </h3>
-            <p>Folie-Méricourt </p>
-            <div class="heart">
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
-              <span class="nouveau4">Nouveau</span>
-            </div>
-          </article>
+        <div class="img_resto">
+          <a href="./public/menu4.html">
+            <figure>
+              <img class="img1" src="./public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="Image La palette du gout">
+              <figcaption class="img">
+                <div class="img_text">
+                  <h3 class="text_bold">Le délice des sens</h3>
+                  <p>Folie-Méricourt</p>
+                </div>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart"></i>
+                <span class="nouveau1">Nouveau</span>
+              </figcaption>>
+            </figure>
+          </a>
         </div>
       </section>
     
