--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+      <link rel="shortcut icon" href="./public/images/logo/ohmyfood@2x.svg" type="image/x-con">
     <title>Ohmyfood</title>
 
   </head>
