--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -14,9 +14,9 @@
 
 <body>
   <header>
-    <div class="banniere">
+    <div class="banner">
       <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
-      <img src="./images/logo/ohmyfood.png" alt="logo" class="logo">
+      <img src="/public/images/logo/ohmyfood.png" alt="logo" class="logo">
     </div>
   </header>
 
@@ -25,32 +25,32 @@
       <h2>ENTRÉES</h2>
       <nav class="navbar">
         <ul>
-          <li class="texte anim clic">
+          <li class="anim_clic">
             <div>
-              <p class="texteplat">Fricassée d'escargot</p>
-              <div class="texte_2">
-                <p class="texte_2_couper">Au piment d'espelette</p>
-                <p class="texteplat--modifier">25€</p>
+              <p class="textplat">Fricassée d'escargot</p>
+              <div class="text_2">
+                <p class="text_2_couper">Au piment d'espelette</p>
+                <p class="textplat--modifier">25€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
           </li>
-          <li class="texte anim_2 clic">
+          <li class="text anim_2_clic">
             <div>
-              <p class="texteplat">Foie gras de canard mi-cuit</p>
-              <div class="texte_2">
-                <p class="texte_2_couper">Et ses copeaux de truffe noire</p>
-                <p class="texteplat--modifier">35€</p>
+              <p class="textplat">Foie gras de canard mi-cuit</p>
+              <div class="text_2">
+                <p class="text_2_couper">Et ses copeaux de truffe noire</p>
+                <p class="textplat--modifier">35€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
           </li>
-          <li class="texte anim_3 clic">
+          <li class="anim_3_clic">
             <div>
-              <p class="texteplat">Oeuf au plat</p>
-              <div class="texte_2">
-                <p class="texte_2_couper">Assaisonné à la truffe sur lit de caviar</p>
-                <p class="texteplat--modifier">20€</p>
+              <p class="textplat">Oeuf au plat</p>
+              <div class="text_2">
+                <p class="text_2_couper">Assaisonné à la truffe sur lit de caviar</p>
+                <p class="textplat--modifier">20€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -62,32 +62,32 @@
       <h2>PLATS</h2>
       <nav class="navbar">
         <ul>
-          <li class="texte anim clic">
+          <li class="anim_clic">
             <div>
-              <p class="texteplat">Filet de boeuf aux herbes</p>
-              <div class="texte_2">
-                <p class="texte_2_couper">Accompagné de sa ribambelle de légumes</p>
-                <p class="texteplat--modifier">40€</p>
+              <p class="textplat">Filet de boeuf aux herbes</p>
+              <div class="text_2">
+                <p class="text_2_couper">Accompagné de sa ribambelle de légumes</p>
+                <p class="textplat--modifier">40€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
           </li>
-          <li class="texte anim_2 clic">
+          <li class="anim_2_clic">
             <div>
-              <p class="texteplat">Parmentier de queue de boeuf</p>
-              <div class="texte_2">
-                <p class="texte_2_couper">À la truffe noire sur sa purée de panais</p>
-                <p class="texteplat--modifier">35€</p>
+              <p class="textplat">Parmentier de queue de boeuf</p>
+              <div class="text_2">
+                <p class="text_2_couper">À la truffe noire sur sa purée de panais</p>
+                <p class="textplat--modifier">35€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
           </li>
-          <li class="texte anim_3 clic">
+          <li class="anim_3_clic">
             <div>
-              <p class="texteplat">Filet de turbot</p>
-              <div class="texte_2">
-                <p class="texte_2_couper">Aux agrumes</p>
-                <p class="texteplat--modifier">44€</p>
+              <p class="textplat">Filet de turbot</p>
+              <div class="text_2">
+                <p class="text_2_couper">Aux agrumes</p>
+                <p class="textplat--modifier">44€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -99,32 +99,32 @@
       <h2>DESSERTS</h2>
       <nav class="navbar">
         <ul>
-          <li class="texte anim clic">
+          <li class="anim_clic">
             <div>
-              <p class="texteplat">Paris-Brest</p>
-              <div class="texte_2">
-                <p class="texte_2_couper">Revisité</p>
-                <p class="texteplat--modifier">18€</p>
+              <p class="textplat">Paris-Brest</p>
+              <div class="text_2">
+                <p class="text_2_couper">Revisité</p>
+                <p class="textplat--modifier">18€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
           </li>
-          <li class="texte anim_2 clic">
+          <li class="anim_2_clic">
             <div>
-              <p class="texteplat">Macaron au chocolat d'exception</p>
-              <div class="texte_2">
-                <p class="texte_2_couper">Et glace à la vanille de Madagascar</p>
-                <p class="texteplat--modifier">22€</p>
+              <p class="textplat">Macaron au chocolat d'exception</p>
+              <div class="text_2">
+                <p class="text_2_couper">Et glace à la vanille de Madagascar</p>
+                <p class="textplat--modifier">22€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
           </li>
-          <li class="texte anim_3 clic">
+          <li class="anim_3_clic">
             <div>
-              <p class="texteplat">Mousse au chocolat </p>
-              <div class="texte_2">
-                <p class="texte_2_couper">Au piment d'Espelette et à la truffe noire</p>
-                <p class="texteplat--modifier">23€</p>
+              <p class="textplat">Mousse au chocolat </p>
+              <div class="text_2">
+                <p class="text_2_couper">Au piment d'Espelette et à la truffe noire</p>
+                <p class="textplat--modifier">23€</p>
               </div>
             </div>
             <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
