begin menu footer &header

--- a/menu/menu4.html
+++ b/menu/menu4.html
@@ -18,6 +18,123 @@
         </div>
     </header>
 
+    <main>
+      <section class="repas">
+        <h2>ENTRÉES</h2>
+        <nav class="navbar">
+          <ul>
+            <li class="anim_clic">
+              <div>
+                <p class="textplat">Tartare de thon</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Assaisonné au yuzu</p>
+                  <p class="textplat--modifier">25€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="text anim_2_clic">
+              <div>
+                <p class="textplat">Bouchée de homard croustillant</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Et sa farandole de petit légumes</p>
+                  <p class="textplat--modifier">35€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_3_clic">
+              <div>
+                <p class="textplat">Velouté de cépes</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Aux truffes</p>
+                  <p class="textplat--modifier">20€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <section class="repas">
+        <h2>PLATS</h2>
+        <nav class="navbar">
+          <ul>
+            <li class="anim_clic">
+              <div>
+                <p class="textplat">Poulet  roti aux herbes de provence</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Et sa créme de truffe</p>
+                  <p class="textplat--modifier">40€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_2_clic">
+              <div>
+                <p class="textplat">Langouste rotie</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Et ses légumes de saison</p>
+                  <p class="textplat--modifier">35€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_3_clic">
+              <div>
+                <p class="textplat">Cote de boeuf Angus</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Et sa purée de panais</p>
+                  <p class="textplat--modifier">44€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <section class="repas">
+        <h2>DESSERTS</h2>
+        <nav class="navbar">
+          <ul>
+            <li class="anim_clic">
+              <div>
+                <p class="textplat">Farandole de desserts</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Du chef</p>
+                  <p class="textplat--modifier">18€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_2_clic">
+              <div>
+                <p class="textplat">Créme brulée</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Revisité</p>
+                  <p class="textplat--modifier">22€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_3_clic">
+              <div>
+                <p class="textplat">Tiramisu</p>
+                <div class="text_2">
+                  <p class="text_2_couper">A la noisette</p>
+                  <p class="textplat--modifier">23€</p>
+                </div>
+              </div>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <a class="button" href="#">Commander</a>
+      </section>
+    </main>
+
+
     <footer>
         <h3>ohmyfood</h3>
         <ul>
