--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section id="resto">
         <h2> restaurants</h2>
         <div class="img_resto">
-          <a href="./public/menu1.html">
+          <a href="./menu/menu1.html">
             <figure>
               <img class="img1" src="./public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Image La palette du gout">
@@ -79,7 +79,7 @@
 
 
         <div class="img_resto">
-          <a href="./public/menu2.html">
+          <a href="./menu/menu2.html">
             <figure>
               <img class="img1" src="./public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="Image la note enchantée">
@@ -97,7 +97,7 @@
         </div>
 
         <div class="img_resto">
-          <a href="./public/menu3.html">
+          <a href="./menu/menu3.html">
             <figure>
               <img class="img1" src="./public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="Image a la francaise">
@@ -115,7 +115,7 @@
         </div>
 
         <div class="img_resto">
-          <a href="./public/menu4.html">
+          <a href="./menu/menu4.html">
             <figure>
               <img class="img1" src="./public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Image La palette du gout">
