--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -25,9 +25,9 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Ravioles de foie gras </p>
+                <p class="textplat">Tartare de poulpe acidulé </p>
                 <div class="text_2">
-                  <p class="text_2_couper">Accompagnés de leurs créme a la truffe</p>
+                  <p class="text_2_couper">Aux zeste d'orange</p>
                   <p class="textplat--modifier">25€</p>
                 </div>
               </div>
@@ -35,9 +35,9 @@
             </li>
             <li class="text anim_2_clic">
               <div>
-                <p class="textplat">Caviar osciétre</p>
+                <p class="textplat">Velouté de légumes d'antan</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Sur blini a la farine de blé noir</p>
+                  <p class="text_2_couper">Carotte,panais,topimanbour</p>
                   <p class="textplat--modifier">35€</p>
                 </div>
               </div>
@@ -45,20 +45,10 @@
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Homard et espuma de potiron</p>
+                <p class="textplat">Soupe a l'oignon</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Mariné aux zestes d'orange</p>
+                  <p class="text_2_couper">revisitée</p>
                   <p class="textplat--modifier">20€</p>
-                </div>
-              </div>
-              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-            </li>
-            <li class="anim_4_clic">
-              <div>
-                <p class="textplat">Foie gras de canrd cuit entier</p>
-                <div class="text_2">
-                  <p class="text_2_couper">Confiture de figue et pain toesté</p>
-                  <p class="textplat--modifier">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -72,9 +62,9 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Noix de coquilles saint-jacques</p>
+                <p class="textplat">Coquilles Saint-jascques</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Sur lit de purée de céleri-rave</p>
+                  <p class="text_2_couper">Accompagnée d'une purée de panais</p>
                   <p class="textplat--modifier">40€</p>
                 </div>
               </div>
@@ -82,9 +72,9 @@
             </li>
             <li class="anim_2_clic">
               <div>
-                <p class="textplat">Langoustine poêlée</p>
+                <p class="textplat">Magret de canard</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Purée de patate douce</p>
+                  <p class="text_2_couper">Et parmentier de pommes de terre</p>
                   <p class="textplat--modifier">35€</p>
                 </div>
               </div>
@@ -92,9 +82,9 @@
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Mijoté de queue de boeuf </p>
+                <p class="textplat">Pigeonneau d'Ille-et-vilaine</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Et riz sauvage aux zestes de citron</p>
+                  <p class="text_2_couper">Sur son lit de gnocchis aux légumes</p>
                   <p class="textplat--modifier">44€</p>
                 </div>
               </div>
@@ -109,9 +99,9 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Macaron noisette et chocolat</p>
+                <p class="textplat">Pétales de violettes glacés</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Glace au caramel brun et sel de Guérande</p>
+                  <p class="text_2_couper">Et purée de noisettes</p>
                   <p class="textplat--modifier">18€</p>
                 </div>
               </div>
@@ -119,9 +109,9 @@
             </li>
             <li class="anim_2_clic">
               <div>
-                <p class="textplat">Baba au rhum revisité</p>
+                <p class="textplat">Fondant au chocolat</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Avec son coulis de citron</p>
+                  <p class="text_2_couper">Revisité</p>
                   <p class="textplat--modifier">22€</p>
                 </div>
               </div>
@@ -129,9 +119,9 @@
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Tarte au citron meringuée </p>
+                <p class="textplat">Millefeuille croustillant</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Déstructurée</p>
+                  <p class="text_2_couper">Myrtilles et pate d'amande</p>
                   <p class="textplat--modifier">23€</p>
                 </div>
               </div>
