modification header menu 2/3/4

--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/style_1.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
@@ -11,12 +11,14 @@
     <title>A la francaise</title>
 </head>
 <body>
+  
     <header>
-        <div class="logo">
-            <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-            <img src="./images/logo/ohmyfood.png" alt="logo" class="logo">
-        </div>
+      <div class="banner">
+        <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
+        <img src="/public/images/logo/ohmyfood.png" alt="logo" class="logo">
+      </div>
     </header>
+
     
     <main>
       <section class="repas">
