begin image menu

--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -18,6 +18,7 @@
       <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
       <img src="/public/images/logo/ohmyfood.png" alt="logo" class="logo">
     </div>
+    <img src="/public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette" class="img_menu" />
   </header>
 
   <main>
