--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -17,6 +17,7 @@
         <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="/public/images/logo/ohmyfood.png" alt="logo" class="logo">
       </div>
+      <img src="/public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette" class="img_menu" />
     </header>
 
     
