modif image menu note

--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -17,7 +17,7 @@
         <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="/public/images/logo/ohmyfood.png" alt="logo" class="logo">
       </div>
-      <img src="/public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la palette" class="img_menu" />
+      <img src="/public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la palette" class="img_menu note" />
     </header>
 
     <main>
