--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="img_resto">
           <a href="./menu/menu2.html">
             <figure>
-              <img class="img1" src="./public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              <img class="img1--modifier" src="./public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="Image la note enchantée">
               <figcaption class="img">
                 <div class="img_text">
