--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
             <figure>
               <img class="img1--modifier" src="./public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="Image la note enchantée">
-              <figcaption class="img">
+              <figcaption class="img-m">
                 <div class="img_text">
                   <h3 class="img_text-bold">La note enchantée</h3>
                   <p>Charonne</p>
                 </div>
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
-                <span class="nouveau1">Nouveau</span>
+                <span class="nouveau2">Nouveau</span>
               </figcaption>>
             </figure>
           </a>
