maj class index

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
         <li class=navbar>
           <span>1</span>
           <i class="fas fa-mobile-alt"></i>
-          <p>Choississez un restaurant</p>
+          <p class="lip">Choississez un restaurant</p>
         </li>
 
         <li class=navbar>
           <span>2</span>
           <i class="fas fa-bars"></i>
-          <p>Composez votre menu</p>
+          <p class="lip">Composez votre menu</p>
         </li>
 
         <li class=navbar>
           <span>3</span>
           <i class="fas fa-store"></i>
-          <p>Dégustez au restaurant</p>
+          <p class="lip">Dégustez au restaurant</p>
         </li>
 
       </ul>
