ajout section.scss

--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -20,120 +20,127 @@
     </div>
     <img src="/public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette" class="img_menu" />
   </header>
-
+  
   <main>
-    <section class="repas">
-      <h2>ENTRÉES</h2>
-      <nav class="navbar">
-        <ul>
-          <li class="anim_clic">
-            <div>
-              <p class="textplat">Fricassée d'escargot</p>
-              <div class="text_2">
-                <p class="text_2_couper">Au piment d'espelette</p>
-                <p class="textplat--modifier">25€</p>
+    <section class="corps">  
+      <div class="titre">
+        <h1>La palette du goût</h1>
+        <i class="far fa-heart coeur"></i>
+        <i class="fas fa-heart plein"></i>
+      </div>
+      
+      <section class="repas">
+        <h2>ENTRÉES</h2>
+        <nav class="navbar">
+          <ul>
+            <li class="anim_clic">
+              <div>
+                <p class="text_plat">Fricassée d'escargot</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Au piment d'espelette</p>
+                  <p class="text_plat--modifier">25€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-          <li class="text anim_2_clic">
-            <div>
-              <p class="textplat">Foie gras de canard mi-cuit</p>
-              <div class="text_2">
-                <p class="text_2_couper">Et ses copeaux de truffe noire</p>
-                <p class="textplat--modifier">35€</p>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="text anim_2_clic">
+              <div>
+                <p class="text_plat">Foie gras de canard mi-cuit</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Et ses copeaux de truffe noire</p>
+                  <p class="text_plat--modifier">35€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-          <li class="anim_3_clic">
-            <div>
-              <p class="textplat">Oeuf au plat</p>
-              <div class="text_2">
-                <p class="text_2_couper">Assaisonné à la truffe sur lit de caviar</p>
-                <p class="textplat--modifier">20€</p>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_3_clic">
+              <div>
+                <p class="text_plat">Oeuf au plat</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Assaisonné à la truffe sur lit de caviar</p>
+                  <p class="text_plat--modifier">20€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-        </ul>
-      </nav>
-    </section>
-    <section class="repas">
-      <h2>PLATS</h2>
-      <nav class="navbar">
-        <ul>
-          <li class="anim_clic">
-            <div>
-              <p class="textplat">Filet de boeuf aux herbes</p>
-              <div class="text_2">
-                <p class="text_2_couper">Accompagné de sa ribambelle de légumes</p>
-                <p class="textplat--modifier">40€</p>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <section class="repas">
+        <h2>PLATS</h2>
+        <nav class="navbar">
+          <ul>
+            <li class="anim_clic">
+              <div>
+                <p class="text_plat">Filet de boeuf aux herbes</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Accompagné de sa ribambelle de légumes</p>
+                  <p class="text_plat--modifier">40€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-          <li class="anim_2_clic">
-            <div>
-              <p class="textplat">Parmentier de queue de boeuf</p>
-              <div class="text_2">
-                <p class="text_2_couper">À la truffe noire sur sa purée de panais</p>
-                <p class="textplat--modifier">35€</p>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_2_clic">
+              <div>
+                <p class="text_plat">Parmentier de queue de boeuf</p>
+                <div class="text_2">
+                  <p class="text_2_couper">À la truffe noire sur sa purée de panais</p>
+                  <p class="text_plat--modifier">35€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-          <li class="anim_3_clic">
-            <div>
-              <p class="textplat">Filet de turbot</p>
-              <div class="text_2">
-                <p class="text_2_couper">Aux agrumes</p>
-                <p class="textplat--modifier">44€</p>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_3_clic">
+              <div>
+                <p class="text_plat">Filet de turbot</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Aux agrumes</p>
+                  <p class="text_plat--modifier">44€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-        </ul>
-      </nav>
-    </section>
-    <section class="repas">
-      <h2>DESSERTS</h2>
-      <nav class="navbar">
-        <ul>
-          <li class="anim_clic">
-            <div>
-              <p class="textplat">Paris-Brest</p>
-              <div class="text_2">
-                <p class="text_2_couper">Revisité</p>
-                <p class="textplat--modifier">18€</p>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <section class="repas">
+        <h2>DESSERTS</h2>
+        <nav class="navbar">
+          <ul>
+            <li class="anim_clic">
+              <div>
+                <p class="text_plat">Paris-Brest</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Revisité</p>
+                  <p class="text_plat--modifier">18€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-          <li class="anim_2_clic">
-            <div>
-              <p class="textplat">Macaron au chocolat d'exception</p>
-              <div class="text_2">
-                <p class="text_2_couper">Et glace à la vanille de Madagascar</p>
-                <p class="textplat--modifier">22€</p>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_2_clic">
+              <div>
+                <p class="text_plat">Macaron au chocolat d'exception</p>
+                <div class="text_2">
+                  <p class="text_2_couper">Et glace à la vanille de Madagascar</p>
+                  <p class="text_plat--modifier">22€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-          <li class="anim_3_clic">
-            <div>
-              <p class="textplat">Mousse au chocolat </p>
-              <div class="text_2">
-                <p class="text_2_couper">Au piment d'Espelette et à la truffe noire</p>
-                <p class="textplat--modifier">23€</p>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+            <li class="anim_3_clic">
+              <div>
+                <p class="text_plat">Mousse au chocolat </p>
+                <div class="text_2">
+                  <p class="text_2_couper">Au piment d'Espelette et à la truffe noire</p>
+                  <p class="text_plat--modifier">23€</p>
+                </div>
               </div>
-            </div>
-            <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
-          </li>
-        </ul>
-      </nav>
-    </section>
-    <a class="button" href="#">Commander</a>
+              <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <a class="button" href="#">Commander</a>
     </section>
   </main>
 
