--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -43,7 +43,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="text anim_2_clic">
+            <li class="anim_2_clic">
               <div>
                 <p class="text_plat">Foie gras de canard mi-cuit</p>
                 <div class="text_2">
